Archive2/24/3ada4a93430380/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:13:5: error: ‘FactoryImpl< <template-parameter-1-1> >::FactoryImpl(Args&& ...) [with Args = {}; T = Derived]’ is private
     FactoryImpl (Args&&... args)
     ^
main.cpp:43:26: error: within this context
     FactoryImpl<Derived> f;
                          ^
